--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ plugins {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("io.springfox:springfox-swagger2:2.6.1")
+    compile("io.springfox:springfox-swagger-ui:2.6.1")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
