--- a/manifest-production.yml
+++ b/manifest-production.yml
@@ -3,3 +3,5 @@ applications:
 - name: pal-tracker-sveryov
   path: build/libs/pal-tracker.jar
   host: ps-pal-tracker-sv
+  services:
+      - tracker-database
