--- a/manifest-review.yml
+++ b/manifest-review.yml
@@ -3,3 +3,5 @@ applications:
 - name: pal-tracker-sveryov
   path: build/libs/pal-tracker.jar
   host: ps-pal-tracker-review-sv
+  services:
+    - tracker-database
