--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     compile("mysql:mysql-connector-java:6.0.6")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    compile("org.springframework.boot:spring-boot-starter-security")
+
 }
 
 repositories {
@@ -28,13 +30,15 @@ def jdbcUrlLocalTest = "jdbc:mysql://localhost:3306/tracker_test?user=tracker&us
 bootRun.environment([
         "WELCOME_MESSAGE": "hello",
         "SPRING_DATASOURCE_URL": jdbcUrlLocalDev,
-        "MANAGEMENT_SECURITY_ENABLED": false
+        "MANAGEMENT_SECURITY_ENABLED": false,
+        "SECURITY_FORCE_HTTPS": false
 ])
 
 test.environment([
         "WELCOME_MESSAGE": "Hello from test",
         "SPRING_DATASOURCE_URL": jdbcUrlLocalTest,
-        "MANAGEMENT_SECURITY_ENABLED": false
+        "MANAGEMENT_SECURITY_ENABLED": false,
+        "SECURITY_FORCE_HTTPS": false
 ])
 
 flyway {
